<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/skin_header_bar_bg">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="标题"
                android:textColor="@color/whirte"
                android:textSize="18.0sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/tab_content"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@color/whirte"/>

        <RadioGroup
            android:id="@+id/tabs_rg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/skin_header_bar_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tab_rb_a"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/selector_tab"
                android:button="@null"
                android:checked="true"
                android:drawablePadding="3.0dip"
                android:drawableTop="@drawable/home"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8.0dip"
                android:text="@string/home_str"
                android:textColor="@color/whirte"
                android:textSize="12.0sp"/>

            <RadioButton
                android:id="@+id/tab_rb_b"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/selector_tab"
                android:button="@null"
                android:drawablePadding="3.0dip"
                android:drawableTop="@drawable/news"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8.0dip"
                android:text="@string/news_str"
                android:textColor="@color/whirte"
                android:textSize="12.0sp"/>

            <RadioButton
                android:id="@+id/tab_rb_c"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/selector_tab"
                android:button="@null"
                android:drawablePadding="3.0dip"
                android:drawableTop="@drawable/ranking"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8.0dip"
                android:text="@string/ranking_str"
                android:textColor="@color/whirte"
                android:textSize="12.0sp"/>

            <RadioButton
                android:id="@+id/tab_rb_d"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/selector_tab"
                android:button="@null"
                android:drawablePadding="3.0dip"
                android:drawableTop="@drawable/account"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8.0dip"
                android:text="@string/account_str"
                android:textColor="@color/whirte"
                android:textSize="12.0sp"/>

            <RadioButton
                android:id="@+id/tab_rb_e"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/selector_tab"
                android:button="@null"
                android:drawablePadding="3.0dip"
                android:drawableTop="@drawable/more"
                android:gravity="center"
                android:maxLines="1"
                android:padding="8.0dip"
                android:text="@string/more_str"
                android:textColor="@color/whirte"
                android:textSize="12.0sp"/>
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>